# mwave

./: .gitignore  LICENSE  README.md  benchmark.py  pyproject.toml  tutorial.py
mwave/: __init__.py  geometry.py  logger.py  phantoms.py  signal_processing.py  utils.py
mwave/acoustics/: __init__.py  conversion.py  operators.py  pml.py  spectral.py  time_harmonic.py  time_varying.py
